# loveable-databricks-integration

./: .clinerules  .cursorrules  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  PLAN.md  PROGRESS.md  README.md  USAGE_EXAMPLES.md  app.yaml  databricks.yml  pyproject.toml
src/: __init__.py  mcp_tools.py  server.py
src/analyzer/: __init__.py  backend_analyzer.py  database_analyzer.py  frontend_analyzer.py  project_scanner.py
src/deployer/: __init__.py  database_deployer.py  databricks_deployer.py
src/generator/: __init__.py  config_generator.py  fastapi_generator.py  model_generator.py  project_generator.py
src/transformer/: __init__.py  auth_converter.py  database_converter.py  edge_function_converter.py  frontend_adapter.py  llm_converter.py  type_converter.py
src/validator/: __init__.py  compatibility_validator.py  deployment_validator.py
templates/config/: app.yaml.jinja2  databricks.yml.jinja2  env.example.jinja2
templates/fastapi/: app.py.jinja2  database.py.jinja2  dependencies.py.jinja2  router.py.jinja2
templates/models/: pydantic.py.jinja2  sqlmodel.py.jinja2
tests/: conftest.py  test_e2e_mcp.py
tests/transformer/: test_llm_converter.py  test_type_converter.py
